--- a/config/west.yml
+++ b/config/west.yml
@@ -2,15 +2,15 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/petejohanson
-    - name: kumamuk-git
-      url-base: https://github.com/kumamuk-git
+    - name: namitakun
+      url-base: https://github.com/namitakun
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: feat/pointers-move-scroll
       import: app/west.yml
     - name: zmk-pmw3610-driver
-      remote: kumamuk-git
+      remote: namitakun
       revision: main
   self:
     path: config
