--- a/config/boards/shields/Test/roBa_R.conf
+++ b/config/boards/shields/Test/roBa_R.conf
@@ -18,7 +18,7 @@ CONFIG_PMW3610_ORIENTATION_180=y
 CONFIG_PMW3610_SCROLL_TICK=16
 CONFIG_PMW3610_INVERT_X=n
 CONFIG_PMW3610_INVERT_SCROLL_X=y
-# スクロールを反転
+// スクロールを反転
 CONFIG_PMW3610_INVERT_SCROLL_Y=y
 CONFIG_PMW3610_RUN_DOWNSHIFT_TIME_MS=3264
 CONFIG_PMW3610_REST1_SAMPLE_TIME_MS=20
@@ -36,9 +36,9 @@ CONFIG_PMW3610_SMART_ALGORITHM=y
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-# マウス速度をいい感じにする
+// マウス速度をいい感じにする
 CONFIG_PMW3610_ADJUSTABLE_MOUSESPEED=y
 
-# zmk studio対応
+// zmk studio対応
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n 
