--- a/config/boards/shields/Test/roBa_R.conf
+++ b/config/boards/shields/Test/roBa_R.conf
@@ -35,7 +35,7 @@ CONFIG_PMW3610_SMART_ALGORITHM=y
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-CONFIG_PMW3610_ADJUSTABLE_MOUSESPEED=y
+# CONFIG_PMW3610_ADJUSTABLE_MOUSESPEED=y
 
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n 
