--- a/config/west.yml
+++ b/config/west.yml
@@ -4,6 +4,8 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: namitakun
       url-base: https://github.com/namitakun
+    - name: prospector
+      url-base: https://github.com/t-ogura
   projects:
     - name: zmk
       remote: zmkfirmware
@@ -12,5 +14,9 @@ manifest:
     - name: zmk-pmw3610-driver
       remote: namitakun
       revision: main
+    - name: prospector-zmk-module
+      remote: prospector
+      revision: v1.0.0
+      path: modules/prospector-zmk-module
   self:
     path: config
